--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "mysql2": "^3.7.1",
     "sequelize": "^6.35.2"
   }
